tests/expectations/compiler/const_prop/evaluate_const_fail.out
DCE_ENABLED:
Error [ECMP0376007]: The value of this const could not be determined at compile time.
    --> compiler-test:10:13
     |
  10 |             const SOME: u32 = a + 1u32;
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ECMP0376007]: The value of this const could not be determined at compile time.
    --> compiler-test:10:13
     |
  10 |             const SOME: u32 = a + 1u32;
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
